graphical bug with sliders on 4k screen #88785

Closed
opened 2021-06-03 10:45:28 +02:00 by Sarunas Atkocaitis · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.47

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: (newest version of Blender that worked as expected)

Short description of error
slider bar goes outside rounded corners.

Exact steps for others to reproduce the error
go to any slider bar with rounded corners and move it to beginning (please see attached screenshot). Changing windows display scaling to 100 % or 200 % does not help. Changing blender UI scaling or line thickness also does not help.Screenshot 2021-06-03 113640.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.47 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: (newest version of Blender that worked as expected) **Short description of error** slider bar goes outside rounded corners. **Exact steps for others to reproduce the error** go to any slider bar with rounded corners and move it to beginning (please see attached screenshot). Changing windows display scaling to 100 % or 200 % does not help. Changing blender UI scaling or line thickness also does not help.![Screenshot 2021-06-03 113640.jpg](https://archive.blender.org/developer/F10155582/Screenshot_2021-06-03_113640.jpg)

Added subscriber: @SarunasAtkocaitis

Added subscriber: @SarunasAtkocaitis
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Leon Schittek self-assigned this 2021-06-03 13:55:30 +02:00
Member

Thanks for the report. I can confirm this in master and 2.93, but not for 2.83. So it definitely is a regression. It can be a bit subtle depending on the resolution, but it's easy to see, when zooming into sliders in the node editor.

master 2.83
master_slider-clipping.jpg 283_no-clipping.jpg

To me it seems like an unintended side-effect of the switch to using sdfs for drawing the widgets: 15dda0115c
This happens because widget_numslider in interface_widgets.c makes the slider-rectangle smaller than twice the corner radius. Because the shader segments the rectangle into quadrants when drawing, it cuts off the rounded corners on the left halfway.

Thanks for the report. I can confirm this in master and 2.93, but not for 2.83. So it definitely is a regression. It can be a bit subtle depending on the resolution, but it's easy to see, when zooming into sliders in the node editor. |**master**|**2.83**| | -- | -- | | ![master_slider-clipping.jpg](https://archive.blender.org/developer/F10155789/master_slider-clipping.jpg) | ![283_no-clipping.jpg](https://archive.blender.org/developer/F10155787/283_no-clipping.jpg) | To me it seems like an unintended side-effect of the switch to using sdfs for drawing the widgets: 15dda0115c This happens because `widget_numslider` in `interface_widgets.c` makes the slider-rectangle smaller than twice the corner radius. Because the shader segments the rectangle into quadrants when drawing, it cuts off the rounded corners on the left halfway.

This issue was referenced by aab9047f9d

This issue was referenced by aab9047f9d6234dc4e692cb062541f85c80cc64e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88785
No description provided.